--- a/nepautok.html
+++ b/nepautok.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div class="container">
-        Három igazi népautó
-
+        <h1>Három igazi népautó</h1>
         Volkswagen bogár
 
         Volkswagen Käfer
