--- a/nepautok.html
+++ b/nepautok.html
@@ -12,7 +12,8 @@
         <h1>Három igazi népautó</h1>
         <h2>Volkswagen bogár</h2>
 
-        <div>
+        <div class="img-box">
+            <img src="img/vw_bogar.jpg" alt="Volkswagen_Bogár">
             Volkswagen Käfer
             1938-2003
             21,5 millió darab
@@ -30,7 +31,8 @@
 
         <h2>Citroën 2CV</h2>
 
-        <div>
+        <div class="img-box">
+            <img src="img/citroen_2cv.jpg" alt="Citroën_2CV">
             Citroën 2CV
             1948-1990
             5,2 millió darab
@@ -46,9 +48,12 @@
 
         <h2>Fiat 500</h2>
 
-        Fiat 500
-        1957-1975
-        3,9 millió darab
+        <div class="img-box">
+            <img src="img/fiat_500.jpg" alt="Fiat 500">
+            Fiat 500
+            1957-1975
+            3,9 millió darab
+        </div>
 
         <p>A Fiat Topolino két évtizedes, minden addiginál ragyogóbb csillaga az 1950-es évek közepén áldozott le. Az ekkor gyártásba vett, Dante Giacosa tervezte 600-as félig-meddig az "Egérke" örökébe lépett, ám a torinói vállalat vezetői úgy gondolták, elfér a kínálatban egy még kisebb, még olcsóbb kocsi is. Az 1957 nyarán bemutatott kisautó, a Topolino hivatalos nevét, az 500-as jelzést kapta a Nuova megkülönböztetéssel kiegészítve. A tervező Giacosa volt, ami a formán is meglátszott.</p>
         <p>Csupán 13 lóerős motorja és két felnőtt szállítására alkalmas utastere tervezője szerint is csak egy fokkal nyújtott többet, mint az akkoriban hihetetlenül népszerű robogók. Hátul egy vadonatúj, felülszelepelt kéthengeres, a Fiat első léghűtéses erőforrása dolgozott, a hajtás szinkronizálatlan négyfokozatú váltón keresztül jutott el a tengelyre.</p>
