--- a/nepautok.html
+++ b/nepautok.html
@@ -14,9 +14,9 @@
 
         <div class="img-box">
             <img src="img/vw_bogar.jpg" alt="Volkswagen_Bogár">
-            Volkswagen Käfer
-            1938-2003
-            21,5 millió darab
+            <p><b>Volkswagen Käfer</b></p>
+            <p><b>1938-2003</b></p>
+            <p></p><b>21,5 millió darab</b></p>
         </div>
 
         <p>A VW Bogár története az 1930-as évekre nyúlik vissza, amikor Németország nemzetiszocialista vezetése széles néprétegek számára elérhető népautó gyártását tűzte ki célul. Az autó fejlesztésében jelentős szerepet játszott Ferdinand Porsche, akit a Bogár megteremtőjeként tartanak számon. A Bogár fejlesztése azonban korábbra nyúlik vissza.<b>Barényi Béla</b> 1925-ben készített részletes terveket, amit azonban a Porsche család hosszú időn keresztül vitatott, mivel ők Ferdinand Porschét tartották az autó konstruktőrének. Barényi csak az 1953-as bírósági ítélet után tudta szerzőségi jogait és ezzel igényeit érvényesíteni. Vitatott és nem véglegesen tisztázott Ganz József szerepe az "Ős Bogár" fejlesztésében. A Ganz első prototípusát a nürnbergi Ardie gyár építette 1930-ban.</p>
@@ -33,9 +33,9 @@
 
         <div class="img-box">
             <img src="img/citroen_2cv.jpg" alt="Citroën_2CV">
-            Citroën 2CV
-            1948-1990
-            5,2 millió darab
+            <p><b>Citroën 2CV</b></p>
+            <p><b>1948-1990</b></p>
+            <p><b>5,2 millió darab</b></p>
         </div>
 
         <p>A Citroën technikai színvonala a II. világháború előtt is az élmezőnyhöz tartozott, a technikusok, a mérnökök korszakalkotó megoldásokon törték a fejüket, és voltaképpen ebben a benzingőzös, fogaskerék-kattogós légkörben fogant azon ötlet, miszerint autóra (pontosabban autóba) kell ültetni az átlagembereket. Ez francia viszonylatban döntően a földműveléssel, gazdálkodással foglalkozó falusiakat jelentette, ám nekik különleges kocsira lett volna szükségük. A gyári séma valahogy így állt össze: képes legyen az autó négy embert és egy zsák krumplit 60 km/h-val elvinni, eközben fogyasztása ne haladja meg a 3 litert 100 kilométerenként, kezelése pedig ne okozzon gondot a legügyetlenebb vezetőnek sem. Fontos szerep hárult a rugózásra: a „négykerekű esernyőnek" úgy kell a szántóföldön keresztülhaladni, hogy a kosárba tett tojások nem törhetnek össze. A gondolatokat tettek követték, és elindult a TPV-projekt (Toute Petite Voiture), amelynek keretében 1939-ig több prototípus is készült.</p>
@@ -50,9 +50,15 @@
 
         <div class="img-box">
             <img src="img/fiat_500.jpg" alt="Fiat 500">
-            Fiat 500
-            1957-1975
-            3,9 millió darab
+            <p>
+                <b>Fiat 500</b>
+            </p>
+            <p>
+                <b>1957-1975</b>
+            </p>
+            <p>
+                <b>3,9 millió darab</b>
+            </p>
         </div>
 
         <p>A Fiat Topolino két évtizedes, minden addiginál ragyogóbb csillaga az 1950-es évek közepén áldozott le. Az ekkor gyártásba vett, Dante Giacosa tervezte 600-as félig-meddig az "Egérke" örökébe lépett, ám a torinói vállalat vezetői úgy gondolták, elfér a kínálatban egy még kisebb, még olcsóbb kocsi is. Az 1957 nyarán bemutatott kisautó, a Topolino hivatalos nevét, az 500-as jelzést kapta a Nuova megkülönböztetéssel kiegészítve. A tervező Giacosa volt, ami a formán is meglátszott.</p>
