--- a/nepautok.html
+++ b/nepautok.html
@@ -12,7 +12,7 @@
         <h1>Három igazi népautó</h1>
         <h2>Volkswagen bogár</h2>
 
-        <div class="img-box">
+        <div class="img-box left">
             <img src="img/vw_bogar.jpg" alt="Volkswagen_Bogár">
             <p><b>Volkswagen Käfer</b></p>
             <p><b>1938-2003</b></p>
@@ -31,7 +31,7 @@
 
         <h2>Citroën 2CV</h2>
 
-        <div class="img-box">
+        <div class="img-box right">
             <img src="img/citroen_2cv.jpg" alt="Citroën_2CV">
             <p><b>Citroën 2CV</b></p>
             <p><b>1948-1990</b></p>
@@ -48,7 +48,7 @@
 
         <h2>Fiat 500</h2>
 
-        <div class="img-box">
+        <div class="img-box left">
             <img src="img/fiat_500.jpg" alt="Fiat 500">
             <p>
                 <b>Fiat 500</b>
